fix: user service and test small fixes